# ElektronikProtocol

./: .gitignore  CMakeLists.txt
headers/: ActionDataPackage.h  Encoder.h
src/: Encoder.cpp  main.cpp
src/Tests/: PointsTests.cpp  PointsTests.h
